Первая лаба готова, разбираюсь со скелетом остальных.

--- a/ivb-3-14/Максимов А.Ю./README
+++ b/ivb-3-14/Максимов А.Ю./README
@@ -1,1 +1,11 @@
 АХХАХАХАХАХААА, я могу в русское название своей папки, лолк.
+
+14 Вариант.
+
+g++ -std=c++11 lab2.cpp
+
+Лабораторная 	сделана
+1				+
+2				-
+3				-
+4				-
